--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "store",
+  "name": "neerpg",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,24 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@casl/ability": "^5.3.1",
     "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.15",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "^7.6.18",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/swagger": "^4.8.0",
-    "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/swagger": "^4.8.2",
+    "@nestjs/typeorm": "^8.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "oracledb": "^5.1.0",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
-    "@golevelup/nestjs-testing": "^0.1.2",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
@@ -74,7 +72,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "coverage",
     "testEnvironment": "node"
   }
 }
